# content-jumpstart-backend

./: .dockerignore  .env.docker.example  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  02_POST_TEMPLATE_LIBRARY.md  03_post_generator.py  AGENT_USER_GUIDE.md  BLOG_PROMPT_ENHANCEMENT_SUMMARY.md  BLOG_PROMPT_TUNING_V2_RESULTS.md  BUGS.md  BUG_FIX_PROJECTS_API.md  CACHING_IMPLEMENTATION_SUMMARY.md  CHANGELOG.md  CHUNK_ERROR_FIX_SUMMARY.md  CLAUDE.md  CLI_PLATFORM_FLAG_COMPLETION.md  COMPREHENSIVE_MVP_TEST_RESULTS.md  DASHBOARD_FIX_SUMMARY.md  DELIVERABLES_ENHANCEMENT_PLAN.md  DELIVERABLES_INTERFACE_ANALYSIS.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_DIAGNOSTICS.md  DEPLOYMENT_FIX_20251219.md  DEPLOYMENT_QUICKSTART.md  DEPLOYMENT_SUCCESS.md  DOCKER_DEPLOYMENT.md  DOWNLOAD_FEATURE_COMPLETION_SUMMARY.md  DOWNLOAD_FEATURE_TESTING.md  DOWNLOAD_FIX_SUMMARY.md  Dockerfile  E2E_TESTING_PLAN.md  E2E_TEST_COMPLETION.md  E2E_TEST_FINDINGS.md  E2E_TEST_RESULTS.md  ENHANCED_DRAWER_COMPLETION.md  ENHANCED_DRAWER_IMPLEMENTATION_PLAN.md  FILE_SIZE_FEATURE_COMPLETION.md  FRONTEND_BACKEND_INTEGRATION.md  (+85 more)
.claude/: settings.local.json
.serena/: project.yml
agent/: __init__.py  context.py  core.py  core_enhanced.py  email_system.py  error_recovery.py  planner.py  prompts.py  scheduler.py  suggestions.py  tools.py  workflows.py
backend/: .dockerignore  .env.docker.example  .env.example  .env.production.example  .gitignore  AUTHORIZATION_IMPLEMENTATION.md  BACKEND_SETUP.md  DEPLOYMENT_FIXES_SUMMARY.md  DOCKER_QUICKSTART.md  DS_TODO.md  Dockerfile  PRODUCTION_DEPLOYMENT.md  QUICKSTART.md  QUICKSTART_GUIDE.md  README.md  RENDER_DEPLOYMENT.md  SEED_DATA_README.md  apply_missing_indexes.py  apply_performance_updates.py  benchmark_queries.py  celery_app.py  config.py  create_demo_files.py  database.py  docker-compose.yml  generate_secret_key.py  init_db.py  main.py  requirements.txt  requirements_updated.txt  seed_demo_data.py  seed_users.py  temp_db_query.py  test_api_endpoints.py  test_backend.py  test_caching.py  test_endpoint.py  tmp_versions.py
docs/: APM_SETUP_GUIDE.md  COORDINATOR_AGENT.md  DEPLOYMENT_RUNBOOK.md  N+1_PRIORITY_2_STATUS.md  N+1_QUERY_ANALYSIS.md  PERFORMANCE_BASELINES.md  RESEARCH_API.md  (+9 more)
(+492 files in other folders)
